# overture-od

./: .gitignore  NOTICE  README.md
app/src-tauri/: Cargo.toml  gen_icons.py  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
engine/: Cargo.toml
engine/src/: calc.rs  combat.rs  config.rs  data.rs  lib.rs  networth.rs  plan.rs  race_resources.rs  rounding.rs  state.rs  tick.rs
engine/tests/: combat.rs  golden.rs
engine/tests/golden/: bank.json  baseline.json  construct.json  daily_bonus.json  dark_elf_def.json  defense.json  destroy.json  draft_rate.json  dwarf_minerssight.json  dwarf_ore.json  explore.json  firewalker_alchemistflame.json  firewalker_construct.json  gnome_def.json  gnome_school.json  gryphon_op.json  harbor.json  human_benchmark_r50.json  human_build_6800.json  icekin_frost.json  improvements.json  kobold_howling.json  kobold_pairing.json  late_start.json  planewalker_homes.json  pop_test.json  pop_test_temple.json  release.json  rezone.json  spells.json  starvation.json  train_spies.json  wood_elf_def.json  woodelf_rezone.json
engine/tests/golden/combat/: combat_basic.json  combat_darkelf_off.json  combat_darkelf_on.json  combat_fail.json  combat_firewalker_off.json  combat_gnome_fixed.json  combat_human_knights.json  combat_icekin_def.json  combat_icekin_wizard.json  combat_lycan_convert.json  combat_orc_prestige.json  combat_overwhelmed.json  combat_spirit_noconvert.json  combat_undead_convert.json  combat_undead_immortal.json  combat_vampire_convert.json
(+52 files in other folders)
